syntax = "proto3";
import "shared/general.proto";

option java_multiple_files = true;
option java_package = "ringManagerPrimeService";
package ringManagerPrimeService;

service RingManagerPrimeService {
  rpc registerServer(stream RegisterServerRequest) returns (stream RegisterServerResponse);
}

message RegisterServerRequest {
  shared.ServerInfo primeServer = 1;
}

message RegisterServerResponse {
  shared.ServerInfo nextServer = 1;
}


message NextRingServerRequest {
  shared.ServerInfo currentRingServer = 1;
}

message NextRingServerResponse {
  shared.ServerInfo nextRingServer = 1;
}




